name:                   ligature
version:                0.1.0
synopsis:               
description:            
license:                OtherLicense
license-file:           LICENSE
category:               Web
stability:              Experimental
build-type:             Simple
cabal-version:          >= 1.10

author:                 Brendan Hay <brendan.g.hay@gmail.com>
maintainer:             Brendan Hay <brendan.g.hay@gmail.com>
homepage:               http://github.com/brendanhay/ligature
bug-reports:            http://github.com/brendanhay/ligature/issues

extra-source-files:     README.md

source-repository head
    type:               git
    location:           git://github.com/brendanhay/numbersd.git

flag development
    description:        Whether to build the server in development (interpreted) mode
    default:            False

executable ligature
    main-is:            Main.hs
    hs-source-dirs:     src

    default-language:   Haskell2010
    default-extensions: FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TypeSynonymInstances

    build-depends:      aeson
                      , directory
                      , base                      >= 4 && < 5
                      , bytestring
                      , conduit
                      , filepath
                      , heist
                      , http-conduit
                      , lens
                      , MonadCatchIO-transformers
                      , mtl
                      , regex-compat
                      , snap
                      , snap-core
                      , snap-server
                      , snap-loader-static
                      , text
                      , time
                      , transformers
                      , unordered-containers
                      , xmlhtml

    if flag(development)
        build-depends:  snap-loader-dynamic
        cpp-options:    -DDEVELOPMENT
        ghc-options:    -threaded -w
    else
        if impl(ghc >= 6.12.0)
            ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                         -fno-warn-orphans -fno-warn-unused-do-bind
        else
            ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                         -fno-warn-orphans
