name:                   ligature
version:                0.1.0
synopsis:               
description:            
license:                OtherLicense
license-file:           LICENSE
category:               Web
stability:              Experimental
build-type:             Simple
cabal-version:          >= 1.10

author:                 Brendan Hay <brendan.g.hay@gmail.com>
maintainer:             Brendan Hay <brendan.g.hay@gmail.com>
homepage:               http://github.com/brendanhay/ligature
bug-reports:            http://github.com/brendanhay/ligature/issues

extra-source-files:     README.md

source-repository head
    type:               git
    location:           git://github.com/brendanhay/numbersd.git

executable ligature
    main-is:            Main.hs
    hs-source-dirs:     src

    default-language:   Haskell2010
    default-extensions: FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TupleSections
                      , TypeSynonymInstances

    build-depends:      aeson
                      , attoparsec
                      , directory
                      , base                      >= 4 && < 5
                      , bytestring
                      , conduit
                      , containers
                      , filepath
                      , hashable
                      , heist
                      , HTTP
                      , http-conduit
                      , lens
                      , network
                      , MonadCatchIO-transformers
                      , mtl
                      , random
                      , regex-compat
                      , snap
                      , snap-core
                      , snap-server
                      , split
                      , text
                      , transformers
                      , unordered-containers
                      , utf8-string
                      , xmlhtml

    if impl(ghc >= 6.12.0)
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                     -fno-warn-orphans -fno-warn-unused-do-bind
    else
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                     -fno-warn-orphans
